--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,57 +1,66 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    height: 30vh;
+    font-size: 16px;
+    background-color: white;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-
-@media (min-width: 1200px) {
-  .h1, h1 {
-    font-size: 2.5rem;
-  }
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-body {
-  margin: 0;
-  color: #212529;
-  line-height: 1.5;
+button {
+    height: 70px;
+    border-color: #254cdd;
+    border: none;
+    background: none;
+    color: white;
+    background-color: #2951f1;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 20px;
+    font-size: 20px;
+    cursor: pointer;
+    align-items: flex-start;
+    padding-left: 0%;
+    min-width: 200px;
+    font-family: Rubik, sans-serif;
 }
 
-.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
-  font-weight: 500;
-  line-height: 1.2;
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 2%;
+    text-align: center;
+    margin: auto;
 }
 
-button, input, optgroup, select, textarea {
-  margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
+h2 {
+
+    font-size: 50px;
+    /* font-style: oblique; */
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: rgb(170, 255, 41);
+    text-align: center;
+    /* clear:both; */
+    /* font-weight:300; */
+    width: 55%;
+    /* text-align: right; */
+    padding-left: 30%;
 }
 
-.popup-overlay {
-  position: fixed;
-  inset: 0px;
-  display: flex;
-  z-index: 999;
-  pointer-events: auto;
-}
-
-#popup-1 {
-  position: relative;
-  margin: auto;
-  pointer-events: auto;
-}
-
-.sale-modal {
-  max-width: 400px;
+h3 {
+    /* margin-top: 70px; */
+    /* margin-bottom: 2%; */
+    font-size: 25px;
+    width: 30%;
+    /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
+    color: rgb(0, 34, 255);
+    text-align:left;
+    /* padding-left:3%; */
+    padding-top: 25px;
+    /* display: block; */
+    /* clear:both; */
+    /* font-weight:400; */
 }
