--- a/src/assets/css/old_project.css
+++ b/src/assets/css/old_project.css
@@ -217,7 +217,7 @@ button {
     border-radius: 5px;
     color: #254cdd;
     margin-top: -10px;
-    margin-right: 30px;
+    margin-right: 3%;
     height: 60px;
     font-size: 20px;
 }
@@ -244,7 +244,6 @@ button {
 
 .drow {
     display: flex;
-
 }
 
 h1 {
@@ -364,7 +363,7 @@ a {
     /* float: right; */
     /* margin-left:87%; */
     position: absolute;
-    right: 70px;
+    right: 6%;
 }
 
 .dropbtn {
@@ -589,7 +588,7 @@ a {
 
 }
 
-@media only screen and (max-width: 767px) {
+/* @media only screen and (max-width: 767px) {
     input {
         font-size: 18px;
         width: 60%;
@@ -712,4 +711,4 @@ a {
         width: 34%;
         margin-bottom: 15px;
     }
-}
+} */
