--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,6 +1,6 @@
 #logo {
     position: absolute;
-    left: 10px  ;
+    left: 20px  ;
     top: 2%;
     width: 210px;
 }
@@ -31,6 +31,7 @@
 #yourdomains {
     position: absolute;
     right: 6%;
+    text-align: right;
 }
 
 .dropdown {
@@ -62,7 +63,7 @@
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    /* position: absolute; */
     background-color: #f1f1f1;
     min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -96,51 +97,14 @@
     text-align: center;
 }
 
-
-@media screen and (max-width: 1023px) {
-    #searchbar h1 {
-        font-size: 28px;
-    }
-    .dropbtn {
-        height: 40px;
-        min-width: 160px;
-    }
-}
-
-@media screen and (max-width: 767px) {
-    #searchbar h1 {
-        font-size: 24px;
-        width: 200px;
-    }
-    .dropbtn {
-        font-size: 15px;
-        height: 40px;
-        min-width: 130px;
-    }
-    #searchbar {
-        padding-top: calc(2% + 85px);
-    }
-}
-
-@media screen and (max-width: 539px) {
-    #logo {
-        width: 120px;
-    }
-
-    .walletButton {
-        height: 40px;
-        font-size: 12px;
-        font-weight: 600;
-        padding: 4px 8px;
-    }
-}
-
 #error {
     color: #ef1111;
     margin-top: 2%;
     font-size: 25px;
     font-weight: 600;
     text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 #greentext {
@@ -194,6 +158,7 @@
 
 .searched_domain {
     display: flex;
+    align-items: center;
     margin-top: 60px;
 }
 
@@ -219,4 +184,10 @@
     padding-left: 2%;
     /* padding-top: 0px; */
     /* margin-top: 10px; */
+}
+
+.searched_domain h3 {
+    width: inherit;
+    padding-top: 0;
+    margin-bottom: 0px;
 }
