--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -5,6 +5,9 @@
     .bluearea {
         margin-top: 350px;
     }
+    #greentext {
+        font-size: 45px;
+    }
 }
 
 @media screen and (max-width: 1023px) {
@@ -17,6 +20,10 @@
     }
     .bluearea {
         margin-top: 300px;
+    }
+    #greentext {
+        font-size: 35px;
+        margin-left: 24%;
     }
 }
 
@@ -51,7 +58,15 @@
     }
     #greentext {
         margin-left: 20%;
-        font-size: 40px;
+        font-size: 30px;
+        width: 40%;
+    }
+    .searched_domain h3 {
+        font-size: 18px;
+    }
+    .to_home {
+        min-width: 180px;
+        height: 60px;
     }
 }
 
@@ -106,11 +121,45 @@
     .input_domain {
         height: 50px;
         font-size: 14px;
-        width: 50%;
+        width: 60%;
     }
     #publish {
-        min-width: 100px;
+        min-width: 90px;
         height: 50px;
         font-size: 14px;
+    }
+
+    #publish svg {
+        width: 14px;
+    }
+    #greentext {
+        margin-left: 13%;
+        font-size: 20px;
+        width: 55%;
+    }
+    .searched_domain h3 {
+        font-size: 12px;
+    }
+    #buyfrom {
+        font-size: 12px;
+    }
+    #buybut {
+        margin-left: 10px;
+        min-width: 60px !important;
+        height: 30px;
+        font-size: 14px;
+    }
+    #error {
+        font-size: 18px;
+    }
+    #success {
+        font-size: 18px;
+    }
+    .to_home {
+        min-width: 140px;
+        height: 45px;
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+        font-size: 18px;
     }
 }
